# forge-gpu

./: .clangd  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  pipeline.toml  pyproject.toml  pyrightconfig.json
lessons/audio/01-audio-basics/: CMakeLists.txt  README.md  main.c
lessons/audio/02-sound-effects/: CMakeLists.txt  README.md  main.c
lessons/audio/05-music-streaming/: CMakeLists.txt  README.md  main.c
lessons/audio/06-dsp-effects/: CMakeLists.txt  README.md  main.c
lessons/engine/12-memory-arenas/: CMakeLists.txt  README.md  main.c
lessons/engine/13-stretchy-containers/: CMakeLists.txt  README.md  main.c
lessons/gpu/36-edge-detection/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/36-edge-detection/shaders/: edge_detect.frag.hlsl  fullscreen.vert.hlsl  ghost.frag.hlsl  ghost.vert.hlsl  grid.frag.hlsl  grid.vert.hlsl  scene.frag.hlsl  scene.vert.hlsl  shadow.vert.hlsl  xray_mark.frag.hlsl  xray_mark.vert.hlsl
lessons/gpu/36-edge-detection/shaders/compiled/: edge_detect.frag.dxil  edge_detect.frag.msl  edge_detect.frag.spv  edge_detect_frag_dxil.h  edge_detect_frag_msl.h  edge_detect_frag_spirv.h  fullscreen.vert.msl  fullscreen_vert_dxil.h  fullscreen_vert_msl.h  fullscreen_vert_spirv.h  ghost.frag.dxil  ghost.frag.msl  ghost.frag.spv  ghost.vert.dxil  ghost.vert.msl  ghost.vert.spv  ghost_frag_dxil.h  ghost_frag_msl.h  ghost_frag_spirv.h  ghost_vert_dxil.h  ghost_vert_msl.h  ghost_vert_spirv.h  grid.frag.dxil  grid.frag.msl  grid.frag.spv  grid.vert.dxil  grid.vert.msl  grid.vert.spv  grid_frag_dxil.h  grid_frag_msl.h  grid_frag_spirv.h  grid_vert_dxil.h  grid_vert_msl.h  grid_vert_spirv.h  scene.frag.dxil  scene.frag.msl  scene.frag.spv  scene.vert.dxil  scene.vert.msl  scene.vert.spv  (+16 more)
lessons/gpu/37-3d-picking/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/37-3d-picking/shaders/: crosshair.frag.hlsl  crosshair.vert.hlsl  grid.frag.hlsl  id_pass.frag.hlsl  id_pass.vert.hlsl  outline.frag.hlsl  scene.frag.hlsl  scene.vert.hlsl  shadow.vert.hlsl
lessons/gpu/37-3d-picking/shaders/compiled/: crosshair.vert.dxil  crosshair.vert.msl  crosshair.vert.spv  crosshair_frag_dxil.h  crosshair_frag_msl.h  crosshair_frag_spirv.h  crosshair_vert_dxil.h  crosshair_vert_msl.h  crosshair_vert_spirv.h  id_pass.frag.dxil  id_pass.frag.msl  id_pass.frag.spv  id_pass.vert.dxil  id_pass.vert.msl  id_pass.vert.spv  id_pass_frag_dxil.h  id_pass_frag_msl.h  id_pass_frag_spirv.h  id_pass_vert_dxil.h  id_pass_vert_msl.h  id_pass_vert_spirv.h  scene.frag.msl  scene_vert_msl.h
lessons/gpu/38-indirect-drawing/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/38-indirect-drawing/shaders/: debug_box.frag.hlsl  debug_box.vert.hlsl  frustum_cull.comp.hlsl  frustum_lines.frag.hlsl  frustum_lines.vert.hlsl  grid.frag.hlsl  grid.vert.hlsl  indirect_box.frag.hlsl  indirect_box.vert.hlsl  indirect_shadow.frag.hlsl  indirect_shadow.vert.hlsl  truck_scene.frag.hlsl  truck_scene.vert.hlsl
lessons/gpu/38-indirect-drawing/shaders/compiled/: debug_box.frag.dxil  debug_box.frag.msl  debug_box.frag.spv  debug_box.vert.dxil  debug_box.vert.msl  debug_box.vert.spv  debug_box_frag_dxil.h  debug_box_frag_msl.h  debug_box_frag_spirv.h  debug_box_vert_dxil.h  debug_box_vert_msl.h  debug_box_vert_spirv.h  frustum_cull.comp.dxil  frustum_cull.comp.msl  frustum_cull.comp.spv  frustum_cull_comp_dxil.h  frustum_cull_comp_msl.h  frustum_cull_comp_spirv.h  frustum_lines.vert.dxil  frustum_lines.vert.msl  frustum_lines.vert.spv  frustum_lines_frag_dxil.h  frustum_lines_frag_msl.h  frustum_lines_frag_spirv.h  frustum_lines_vert_dxil.h  frustum_lines_vert_msl.h  frustum_lines_vert_spirv.h  grid.frag.dxil  grid.frag.msl  grid_frag_spirv.h  (+33 more)
lessons/gpu/39-pipeline-processed-assets/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/39-pipeline-processed-assets/shaders/: grid.frag.hlsl  grid.vert.hlsl  scene_pipeline.frag.hlsl  scene_pipeline.vert.hlsl  scene_raw.frag.hlsl  scene_raw.vert.hlsl  shadow.frag.hlsl  shadow.vert.hlsl  sky.frag.hlsl  sky.vert.hlsl
lessons/gpu/40-scene-renderer/: CMakeLists.txt  README.md  main.c
lessons/gpu/41-scene-model-loading/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/42-pipeline-texture-compression/: CMakeLists.txt  README.md  main.c
lessons/gpu/43-pipeline-skinned-animations/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/44-pipeline-morph-animations/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/45-scene-transparency-sorting/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/46-particle-animations/: CMakeLists.txt  PLAN.md  README.md  main.c
lessons/gpu/46-particle-animations/shaders/: particle.frag.hlsl  particle.vert.hlsl  particle_sim.comp.hlsl
tests/audio/: CMakeLists.txt  README.md  test_audio.c
tests/containers/: CMakeLists.txt  README.md  test_containers.c
tests/gltf/: CMakeLists.txt  README.md  fuzz_gltf.c  test_gltf.c  test_gltf_overflow.c
tests/physics/: CMakeLists.txt  README.md  test_physics.c  test_physics_common.h  test_physics_epa.c  test_physics_gjk.c  test_physics_joints.c  test_physics_manifold.c  test_physics_production.c  test_physics_rbc.c  test_physics_sap.c  test_physics_shapes.c  test_physics_si.c  test_physics_world.c
tests/pipeline/: CMakeLists.txt  README.md  generate_fixtures.py  test_animation.py  test_atlas.py  test_bundler.py  test_import_settings.py  test_mesh.py  test_pipeline.c  test_plugin.py  test_scene.py  test_scenes.py  test_server.py  test_texture.py  test_tool_finder.py
tests/pipeline/fixtures/: checkerboard.ftex  multi_lod.fmesh  simple.fmat  triangle.fmesh
tests/scene/: CMakeLists.txt  README.md  test_scene.c  test_scene_common.h  test_scene_model.c  test_scene_skinned.c  test_scene_transparency.c
tests/shapes/: CMakeLists.txt  README.md  test_shapes.c
tools/anim/: CMakeLists.txt  README.md  main.c
tools/mesh/: CMakeLists.txt  README.md  main.c
tools/scene/: CMakeLists.txt  README.md  main.c
tools/texture/: CMakeLists.txt  README.md  main.c
(+1056 files in other folders)
